test_suite/alan-2022-examples/failing/007170_mutation.alan
source B begin put "P" . if 36 then relax end "1|}" end
